improvements to auto-promotion
